<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.ickphum.android.isoscene"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <com.ickphum.android.isoview.IsoCube
            android:id="@+id/cube"
            android:layout_width="105dp"
            android:layout_height="119dp"
            android:layout_gravity="center_vertical|center_horizontal"
            app:action="paint"
            app:leftColor="#fff0"
            app:rightColor="#f0ff"
            app:topColor="#ff0f" />
        
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/paintButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/paint"
                    android:onClick="changeAction"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/action_paint_r"
                    android:tag="@string/paint" />

                <ImageButton
                    android:id="@+id/sampleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sample"
                    android:onClick="changeAction"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:scaleType="center"
                    android:src="@drawable/action_sample_r"
                    android:tag="@string/sample" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/eraseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/erase"
                    android:longClickable="true"
                    android:onClick="changeAction"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/action_erase_current_r"
                    android:tag="@string/erase" />

                <ImageButton
                    android:id="@+id/selectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/select"
                    android:onClick="changeAction"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/action_select_current_r"
                    android:tag="@string/select" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/lightenButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/lighten"
                    android:onClick="lightenCurrentColor"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/action_lighten_r"
                    android:tag="@string/lighten" />

                <ImageButton
                    android:id="@+id/darkenButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/darken"
                    android:onClick="darkenCurrentColor"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/action_darken_r"
                    android:tag="@string/darken" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/shadeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/shade"
                    android:onClick="shadesFromCurrentColor"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/action_shade_r"
                    android:tag="@string/shade" />

                <ImageButton
                    android:id="@+id/shadeCubeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/shade_cube"
                    android:onClick="changeAction"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/action_shade_cube_r"
                    android:tag="@string/shade_cube" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/moveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/move"
                    android:onClick="toggleMoveFlag"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/move_off" />

                <ImageButton
                    android:id="@+id/areaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/area"
                    android:onClick="toggleAreaFlag"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/area_r_off" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/copyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/copy"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:src="@drawable/copy" />

                <ImageButton
                    android:id="@+id/cutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cut"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/cut" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/pasteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/paste"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/paste" />

                <ImageButton
                    android:id="@+id/clearAllSelectionsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/clear_all_selections"
                    android:onClick="showSelectionTools"
                    android:paddingBottom="@dimen/button_vertical_padding"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:paddingTop="@dimen/button_vertical_padding"
                    android:src="@drawable/select_none" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/selectAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/select_all"
                    android:src="@drawable/select_all" />

                <ImageButton
                    android:id="@+id/selectVisibleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/select_all_visible"
                    android:src="@drawable/select_visible" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/undoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/undo"
                    android:paddingLeft="@dimen/horizontal_undo_padding"
                    android:paddingRight="@dimen/horizontal_undo_padding"
                    android:src="@drawable/undo" />

                <ImageButton
                    android:id="@+id/redoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/redo"
                    android:paddingLeft="@dimen/horizontal_undo_padding"
                    android:paddingRight="@dimen/horizontal_undo_padding"
                    android:src="@drawable/redo" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/undoToBranchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/undo_to_branch"
                    android:src="@drawable/undo_to_branch" />

                <ImageButton
                    android:id="@+id/redoToBranchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/redo_to_branch"
                    android:src="@drawable/redo_to_branch" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/newBranchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/new_branch"
                    android:src="@drawable/new_branch"
                    android:visibility="visible" />

                <ImageButton
                    android:id="@+id/chooseBranchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/choose_branch"
                    android:src="@drawable/choose_branch"
                    android:visibility="visible" />

            </TableRow>

        </TableLayout>


    </LinearLayout>

    <com.ickphum.android.isoview.InteractiveLineGraphView
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:padding="@dimen/chart_padding"
        android:visibility="gone"
        app:axisColor="#d000"
        app:axisThickness="2dp"
        app:dataColor="#a6c"
        app:dataThickness="8dp"
        app:gridColor="#2000"
        app:gridThickness="1dp"
        app:labelSeparation="10dp"
        app:labelTextColor="#d000"
        app:labelTextSize="14sp" />
    
    <com.ickphum.android.isoview.GLIsoCanvas
        android:id="@+id/gLCanvas"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5" />
    
</LinearLayout>